<resources>

    <!--MAIN ACTIVITY-->
    <string name="app_name">EuskWeatherApp</string>
    <string name="tituloAcercaDe">Acerca de...</string>
    <string name="descriAcercaDe">App desarrollada por EuskWeather Group</string>
    <string name="usuarioExiste">¡EL USUARIO YA EXISTE!</string>
    <string name="usuarioNoValido">INICIO NO VALIDO, EL USUARIO NO EXISTE</string>
    <string name="inicioSesionCorrecto">INICIO DE SESION EXITOSO</string>
    <string name="contraIncorrecta">CONTRASEÑA INCORRECTA</string>
    <string name="hintUsuario">Usuario</string>
    <string name="lblUsuario">Usuario:</string>
    <string name="hintContrasenia">Contraseña</string>
    <string name="lblContrasenia">Contraseña:</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnRegistro">REGISTRATE</string>
    <string name="errorLogin">ERROR- REVISA EL USUARIO O LA CONTRASEÑA</string>
    <string name="errorComunicacion">ERROR_COMUNICACION</string>
    <string name="errorGeneral">ERROR_GENERAL</string>

    <!--MENU PRINCIPAL-->
    <string name="salirMenu">ES NECESARIO CERRAR SESION</string>
    <string name="cierreSesionCorrecto">SESION CERRADA CORRECTAMENTE</string>
    <string name="lblBienvenido">Bienvenido</string>
    <string name="lblPregunta">¿Qué desea hacer?</string>
    <string name="btnListaMunicipios">LISTA DE MUNICIPIOS</string>
    <string name="btnListaEspaciosNaturales">LISTA DE ESPACIOS NATURALES</string>
    <string name="btnMisFavoritos">MIS FAVORITOS</string>
    <string name="btnTopListados">TOP LISTADOS</string>
    <string name="btnCerrarSesion">CERRAR SESION</string>

    <!--REGISTRO USUARIOS-->
    <string name="camposVaciosRegistro">DEBES RELLENAR TODOS LOS CAMPOS</string>
    <string name="contrasNoCoinciden">LAS CONTRASEÑAS NO COINCIDEN</string>
    <string name="nomUsuarioVacio">DEBES ESTABLECER UN NOMBRE DE USUARIO</string>
    <string name="contrasVacias">DEBES ESTABLECER UNA CONTRASEÑA</string>
    <string name="tituloUsuCreado">USUARIO CREADO</string>
    <string name="descriUsuCreado">Pulse ok para regresar a inicio.</string>
    <string name="lblNomApellidos">Nombre y apellidos:</string>
    <string name="hintNomApellidos">Nombre y apellidos</string>
    <string name="lblDireccion">Direccion:</string>
    <string name="hintDireccion">Direccion</string>
    <string name="lblCorreoElectronico">Correo electrónico:</string>
    <string name="hintCorreoElectronico">Correo electrónico</string>
    <string name="lblNomUsuario">Nombre de usuario:</string>
    <string name="hintNomUsuario">Nombre de usuario</string>
    <string name="lblContra">Contraseña:</string>
    <string name="lblContraConfirm">Confirmar contraseña:</string>

    <!--LISTADO MUNICIPIOS-->
    <string name="tituloMenuContextual">Pulsa sobre la opcion deseada</string>

    <!--MENU CONTEXTUAL LISTADOS-->
    <string name="opcInfo">Información</string>
    <string name="opcAgregarImg">Agregar imagen</string>

    <!--MUNICIPIOS-->
    <string name="nombreMuniAdap">Nombre municipio: </string>
    <string name="alcaldeMuniAdap">Alcalde: </string>
    <string name="webMuniAdap">Web municipio: </string>
    <string name="alertTituloInfoMuni">INFO DEL MUNICIPIO</string>
    <string name="aniadirFavorito">AÑADIR A FAVORITOS</string>
    <string name="quitarFavorito">ELIMINAR DE FAVORITOS</string>
    <string name="masInfo">MAS INFORMACION</string>
    <string name="cerrarAlert">CERRAR</string>

    <!--MENU OPCIONES-->
    <string name="opcAcercaDe">Acerca de...</string>
    <string name="opcCambioContra">Cambiar contraseña</string>

    <!--ESPACIO NATURAL ADAPTER-->
    <string name="nomEspacioAdap">Nombre: </string>
    <string name="descriEspacioAdap">Descripcion: </string>
    <string name="tipoEspacioAdap">Tipo: </string>
    <string name="alertTituloEspNat">INFO DEL ESPACIO NATURAL</string>
    <string name="nomProv">Nombre provincia: </string>
    <string name="saturacionTop">Saturacion de O2: </string>
    <string name="temperaturaTop">Temperatura: </string>
    <string name="presionTop">Presion atmosferica: </string>

    <!--ACTIVITIES-->
    <string name="lblNombre">Nombre: </string>
    <string name="lblTipo">Tipo: </string>
    <string name="lblTemperatura">Temperatura: </string>
    <string name="lblCalidadAire">Calidad de aire: </string>
    <string name="btnVerMapa">VER EN MAPA</string>
    <string name="lblInfo">Informacion: </string>
    <string name="lblPresionAtm">Presion atm: </string>
    <string name="lblFecha">Fecha: </string>
    <string name="lblSaturacion">Saturacion O2: </string>
    <string name="lblImagenSelec">IMAGEN SELECCIONADA</string>
    <string name="btnPlaya">PLAYAS</string>
    <string name="btnRios">RIOS</string>
    <string name="btnPantanos">PANTANOS</string>
    <string name="registrarUsu">REGISTRAR</string>
    <string name="topSaturacion">Mayor Saturacion de O2</string>
    <string name="topPresionAtm">Menor Presion Atmosferica</string>
    <string name="topTemperaturas">Temperaturas mas altas</string>
    <string name="infoNoDisponible">INFO NO DISPONIBLE</string>
    <string name="msjCompartirFoto">Mira la foto que encontre de </string>

</resources>