<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nomProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomProv"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nombMuni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreMuniAdap"/>

    <TextView
        android:id="@+id/presion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presionTop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/separador"/>

</LinearLayout>