<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegistroUsuario">

    <TextView
        android:id="@+id/lblConfirmPass"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lblContraConfirm"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtContraConfirm"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblPassRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lblContra"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtContra"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContra"
        android:layout_width="205dp"
        android:layout_height="44dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/lblConfirmPass"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNomApe"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hintNomApellidos"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lblDireccion"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="208dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hintCorreoElectronico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/lblNomUsu"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblNomUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lblNomUsuario"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNomUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lblDireccion"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtDireccion"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNomUsuario"
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hintNomUsuario"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lblPassRegistro"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lblCorreoElectronico"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hintDireccion"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lblCorreo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblNomApe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="4dp"
        android:text="@string/lblNomApellidos"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNomApe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtContraConfirm"
        android:layout_width="204dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="183dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:onClick="ingresarUsuario"
        android:text="@string/registrarUsu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>